[project]
name = "agentils"
version = "0.1.0"
description = "AI Agent Utilities - Powerful toolkit for building AI agents with LLM integration and decorators"
readme = "README.md"
authors = [{ name = "aggreyeric", email = "ericaggrey@outlook.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["pydantic>=2.11.7", "google-genai>=0.3.0"]
keywords = ["ai", "agents", "llm", "gemini", "decorators", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/aggreyeric/agentils"
Repository = "https://github.com/aggreyeric/agentils"
Documentation = "https://github.com/aggreyeric/agentils#readme"
Issues = "https://github.com/aggreyeric/agentils/issues"

[project.scripts]
agentils = "agentils:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentils"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


# Use PyPI as the default index for dependencies
# Private repository publishing is handled in publish scripts
